@@ -22,4 +22,5 @@
 5. add v2/driver/decisionDriver api
 6. add v2/driver/orderTrack api
 7. add v2/driver/location api
-8. add v2/order delete api
+8. add v2/receipt/create api
+9. add v2/order delete api
